Adicionei todos os botões, finalizado.

--- a/DoItNow/DoItNow.csproj
+++ b/DoItNow/DoItNow.csproj
@@ -88,5 +88,14 @@
   <ItemGroup>
     <None Include="Resources\resize.jpeg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\up.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\up1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\down.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
